--- a/public/style.css
+++ b/public/style.css
@@ -63,6 +63,9 @@ footer {
   .notification-bar a {
     color: white; }
 
+h1 {
+  text-align: center; }
+
 .links {
   max-width: 600px;
   margin: 0 auto;
@@ -78,6 +81,19 @@ footer {
   border-radius: 3px;
   background: white;
   box-shadow: 0 3px 0 #eee; }
+  .link .vote-block {
+    display: inline-block;
+    width: 100px; }
+    .link .vote-block .inner {
+      position: absolute;
+      left: 0;
+      top: 0;
+      margin: auto;
+      display: inline-block;
+      padding: 10px;
+      border-radius: 50%; }
+      .link .vote-block .inner a {
+        text-decoration: none; }
   .link.active {
     max-height: 125px;
     margin: 20px 0;
@@ -97,8 +113,7 @@ footer {
   .link blockquote {
     font-size: 14px;
     display: inline-block;
-    float: right;
-    width: calc(100% - 72px);
+    width: calc(100% - 100px);
     margin: 0;
     padding: 10px; }
     .link blockquote cite {
