--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,18 +1,19 @@
 <!doctype html>
 <html>
   <head>
-    <title>React Isomorphic Server Side Rendering Example</title>
+    <title>JAKT Slack links</title>
     <link href='/style.css' rel="stylesheet">
     <script src="//www.parsecdn.com/js/parse-1.6.2.min.js"></script>
   </head>
   <body>
-	<h1 id="main-title"> Isomorphic Server Side Rendering with React</h1>
+	<h1 id="main-title"> JAKT Slack links</h1>
 
     <div id="react-main-mount">
       <%- reactOutput %>
     </div>
 
-    <script id="initial-state" type="application/json"><%- state %></script>
+    <script id="initial-state-links" type="application/json"><%- state %></script>
+    <script id="initial-state-channels" type="application/json"><%- channels %></script>
 
     <script type="text/javascript">
         Parse.initialize("4aM4ir2NIena1vdc2OZgMnH9K3vIg9Ej6LON2j3j", "ucSFa5HkZ0sJ9CdOdF9P5y9FtXFhMFFTwaZaZiaO");
