--- a/public/style.css
+++ b/public/style.css
@@ -152,3 +152,92 @@ h1 {
   footer a:after {
     font-size: 12px;
     content: '← Back To Learning React'; } }
+
+body > span, body > h1 {
+  float: left;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  margin-bottom: 10px; }
+
+span {
+  color: #888888; }
+  span > b {
+    color: black; }
+
+#selected {
+  float: left;
+  width: 100%;
+  margin-top: 20px; }
+
+div.dropdown-container {
+  display: block;
+  width: 100%;
+  margin-top: 60px; }
+  div.dropdown-container.show > div.dropdown-list {
+    transition: all ease 250ms;
+    height: 200px; }
+  div.dropdown-container > div.dropdown-display {
+    float: left;
+    width: 100%;
+    background: white;
+    height: 40px;
+    cursor: pointer;
+    border: solid 1px #DDD; }
+    div.dropdown-container > div.dropdown-display > * {
+      float: left;
+      height: 100%; }
+    div.dropdown-container > div.dropdown-display > span {
+      font-size: 14px;
+      width: 100%;
+      position: relative;
+      padding-right: 34px;
+      padding-left: 10px; }
+    div.dropdown-container > div.dropdown-display > i {
+      position: relative;
+      width: 14px;
+      margin-left: -24px;
+      font-size: 1.125em;
+      font-weight: bold;
+      padding-right: 10px;
+      text-align: right;
+      color: black; }
+  div.dropdown-container > div.dropdown-list {
+    float: left;
+    width: 100%;
+    position: relative;
+    transition: all ease 250ms;
+    height: 0px;
+    overflow: scroll; }
+    div.dropdown-container > div.dropdown-list > div {
+      position: absolute;
+      width: 100%;
+      z-index: 2;
+      cursor: pointer;
+      background: white; }
+      div.dropdown-container > div.dropdown-list > div > div {
+        float: left;
+        width: 100%;
+        padding: 8px 10px;
+        font-size: 14px;
+        border: solid 1px #DDD;
+        border-top: none;
+        color: gray; }
+        div.dropdown-container > div.dropdown-list > div > div:hover {
+          background: #F0F0F0; }
+        div.dropdown-container > div.dropdown-list > div > div.selected {
+          background: #2875C7;
+          color: white; }
+        div.dropdown-container > div.dropdown-list > div > div > span {
+          float: left;
+          width: 100%;
+          position: relative;
+          padding-right: 20px;
+          color: inherit; }
+        div.dropdown-container > div.dropdown-list > div > div > i {
+          float: left;
+          width: 10px;
+          margin-left: 10px;
+          display: none; }
+        div.dropdown-container > div.dropdown-list > div > div.selected > i {
+          display: inline-block; }
