adding socket io

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,6 +16,8 @@
     <script id="initial-state-links" type="application/json"><%- init_state %></script>
     <script id="initial-state-channels" type="application/json"><%- channels %></script>
 
+    <script src="https://cdn.socket.io/socket.io-1.1.0.js"></script>
+
     <script type="text/javascript">
         Parse.initialize("4aM4ir2NIena1vdc2OZgMnH9K3vIg9Ej6LON2j3j", "ucSFa5HkZ0sJ9CdOdF9P5y9FtXFhMFFTwaZaZiaO");
     </script>
