--- a/public/style.css
+++ b/public/style.css
@@ -49,6 +49,7 @@ footer {
   font-weight: bold;
   position: fixed;
   top: -60px;
+  left: 0;
   width: 100%;
   -webkit-transition: 300ms top ease;
   -moz-transition: 300ms top ease;
