--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,8 +13,9 @@
       <%- reactOutput %>
     </div>
 
-    <script id="initial-state-links" type="application/json"><%- init_state %></script>
+    <script id="initial-state-links" type="application/json"><%- links %></script>
     <script id="initial-state-channels" type="application/json"><%- channels %></script>
+    <script id="initial-state-users" type="application/json"><%- users %></script>
 
     <script src="https://cdn.socket.io/socket.io-1.1.0.js"></script>
 
