--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,7 @@
 @charset "UTF-8";
 @import url(fonts/font-awesome/css/font-awesome.css);
+@import url(//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css);
+@import url(https://fonts.googleapis.com/css?family=Lato:400,700);
 * {
   box-sizing: border-box; }
 
@@ -20,7 +22,7 @@
   font-style: normal; }
 
 body {
-  font-family: 'ProximaNova-Regular', 'ProximaNova-Regular', sans-serif;
+  font-family: 'Lato', 'Lato', sans-serif;
   margin: 0;
   padding: 0 0 40px 0;
   color: #404040;
@@ -202,31 +204,22 @@ h1 {
       line-height: 23px;
       padding-top: 15px;
       padding-bottom: 15px;
-      clear: both;
-      box-sizing: border-box;
-      display: -webkit-box;
-      display: -moz-box;
-      display: box;
-      display: -webkit-flex;
-      display: -moz-flex;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-box-align: center;
-      -moz-box-align: center;
-      box-align: center;
-      -webkit-align-items: center;
-      -moz-align-items: center;
-      -ms-align-items: center;
-      -o-align-items: center;
-      align-items: center;
-      -ms-flex-align: center;
       border-radius: 3px;
       margin: 0 -10px;
       padding: 10px;
-      position: relative; }
-      .container .links .link:hover {
-        background: #f7f7fa; }
-      .container .links .link .post-vote-button {
+      list-style: none; }
+      .container .links .link .inner {
+        -webkit-transition: background, 0.1s;
+        -moz-transition: background, 0.1s;
+        transition: background, 0.1s;
+        background: white;
+        font-size: 18px;
+        min-height: 110px;
+        line-height: 23px;
+        padding-top: 15px;
+        padding-bottom: 15px;
+        clear: both;
+        box-sizing: border-box;
         display: -webkit-box;
         display: -moz-box;
         display: box;
@@ -234,49 +227,22 @@ h1 {
         display: -moz-flex;
         display: -ms-flexbox;
         display: flex;
-        -webkit-flex-flow: column nowrap;
-        -moz-flex-flow: column nowrap;
-        flex-flow: column nowrap;
-        color: black;
-        position: relative;
-        text-align: center;
-        padding-right: 10px;
-        cursor: pointer; }
-        .container .links .link .post-vote-button .post-vote-button--count {
-          font-size: 13px;
-          line-height: 16px;
-          margin: 2px 0 0; }
-      .container .links .link .center {
-        display: inline-block;
-        vertical-align: middle;
-        margin-left: 20px;
-        -webkit-box-flex: 1;
-        -moz-box-flex: 1;
-        box-flex: 1;
-        -webkit-flex: 1;
-        -moz-flex: 1;
-        -ms-flex: 1;
-        flex: 1; }
-        .container .links .link .center .link-link {
-          text-decoration: none;
-          color: #1B6982;
-          font-size: 20px;
-          font-weight: 600;
-          margin: 6px 2px 0 0px;
-          line-height: 22px;
-          margin-right: 5px;
-          max-width: 700px;
-          white-space: nowrap;
-          overflow: hidden;
-          text-overflow: ellipsis;
-          display: inline-block;
-          cursor: pointer; }
-        .container .links .link .center .content-desc {
-          color: #999999;
-          font-size: 17px;
-          margin: 5px 0 0 0px;
-          display: block;
-          line-height: 20px;
+        -webkit-box-align: center;
+        -moz-box-align: center;
+        box-align: center;
+        -webkit-align-items: center;
+        -moz-align-items: center;
+        -ms-align-items: center;
+        -o-align-items: center;
+        align-items: center;
+        -ms-flex-align: center;
+        border-radius: 3px;
+        margin: 0 -10px;
+        padding: 10px;
+        position: relative; }
+        .container .links .link .inner:hover {
+          background: #f7f7fa; }
+        .container .links .link .inner .post-vote-button {
           display: -webkit-box;
           display: -moz-box;
           display: box;
@@ -284,28 +250,115 @@ h1 {
           display: -moz-flex;
           display: -ms-flexbox;
           display: flex;
-          -webkit-box-align: center;
-          -moz-box-align: center;
-          box-align: center;
-          -webkit-align-items: center;
-          -moz-align-items: center;
-          -ms-align-items: center;
-          -o-align-items: center;
-          align-items: center;
-          -ms-flex-align: center; }
-      .container .links .link .right {
-        display: inline-block;
-        vertical-align: middle;
-        margin-left: 20px; }
-        .container .links .link .right .user-image {
+          -webkit-flex-flow: column nowrap;
+          -moz-flex-flow: column nowrap;
+          flex-flow: column nowrap;
+          color: black;
+          position: relative;
+          text-align: center;
+          padding-right: 10px;
+          cursor: pointer;
+          text-decoration: none; }
+          .container .links .link .inner .post-vote-button .post-vote-button--count {
+            font-size: 13px;
+            line-height: 16px;
+            margin: 2px 0 0; }
+        .container .links .link .inner .center {
           display: inline-block;
-          position: relative; }
-        .container .links .link .right img {
-          border-radius: 50%;
-          top: 17px;
-          left: 13px;
+          vertical-align: middle;
+          margin-left: 20px;
+          -webkit-box-flex: 1;
+          -moz-box-flex: 1;
+          box-flex: 1;
+          -webkit-flex: 1;
+          -moz-flex: 1;
+          -ms-flex: 1;
+          flex: 1; }
+          .container .links .link .inner .center .link-link {
+            text-decoration: none;
+            color: #1B6982;
+            font-size: 20px;
+            font-weight: 600;
+            margin: 6px 2px 0 0px;
+            line-height: 22px;
+            margin-right: 5px;
+            max-width: 680px;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            display: inline-block;
+            cursor: pointer; }
+          .container .links .link .inner .center .content-desc {
+            color: #999999;
+            font-size: 17px;
+            margin: 5px 0 0 0px;
+            display: block;
+            line-height: 20px;
+            display: -webkit-box;
+            display: -moz-box;
+            display: box;
+            display: -webkit-flex;
+            display: -moz-flex;
+            display: -ms-flexbox;
+            display: flex;
+            -webkit-box-align: center;
+            -moz-box-align: center;
+            box-align: center;
+            -webkit-align-items: center;
+            -moz-align-items: center;
+            -ms-align-items: center;
+            -o-align-items: center;
+            align-items: center;
+            -ms-flex-align: center; }
+        .container .links .link .inner .right {
           display: inline-block;
-          position: relative; }
+          vertical-align: middle;
+          margin-left: 20px;
+          margin-right: 10px; }
+          .container .links .link .inner .right .user-image {
+            display: inline-block;
+            position: relative; }
+          .container .links .link .inner .right img {
+            border-radius: 50%;
+            left: 13px;
+            display: inline-block;
+            position: relative; }
+      .container .links .link:hover {
+        background: #f7f7fa; }
+        .container .links .link:hover .inner {
+          background: #f7f7fa; }
+      .container .links .link .comments {
+        cursor: pointer; }
+        .container .links .link .comments .comm-bubble {
+          display: inline-block;
+          font-size: 13px; }
+        .container .links .link .comments .spacer {
+          display: inline-block;
+          font-size: 13px;
+          width: 24px; }
+        .container .links .link .comments form {
+          margin: 0 auto;
+          width: 500px;
+          display: inline-block;
+          position: relative;
+          left: 24px; }
+          .container .links .link .comments form .form-group {
+            width: 100%; }
+        .container .links .link .comments ul {
+          list-style-type: none; }
+          .container .links .link .comments ul li {
+            list-style: none;
+            padding: 10px; }
+            .container .links .link .comments ul li img {
+              -webkit-border-radius: 50%;
+              -moz-border-radius: 50%;
+              border-radius: 50%;
+              position: relative; }
+            .container .links .link .comments ul li span.userName {
+              margin-left: 2px;
+              color: #6A6A6B; }
+            .container .links .link .comments ul li span.userComment {
+              margin-left: 6px; }
       .container .links .link.active {
         max-height: 125px;
         margin: 20px 0;
