--- a/public/style.scss
+++ b/public/style.scss
@@ -1,5 +1,6 @@
 @import "fonts/font-awesome/css/font-awesome.css";
-
+@import url(//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css);
+@import url(https://fonts.googleapis.com/css?family=Lato:400,700);
 * {
     box-sizing: border-box;
 }
@@ -26,7 +27,7 @@
 
 body {
     //font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    font-family: 'ProximaNova-Regular', 'ProximaNova-Regular', sans-serif;
+    font-family: 'Lato', 'Lato', sans-serif;
     margin: 0;
     padding: 0 0 40px 0;
     color: #404040;
@@ -276,35 +277,24 @@ h1 {
             line-height: 23px;
             padding-top: 15px;
             padding-bottom: 15px;
-            clear: both;
-            box-sizing: border-box;
-            display: -webkit-box;
-            display: -moz-box;
-            display: box;
-            display: -webkit-flex;
-            display: -moz-flex;
-            display: -ms-flexbox;
-            display: flex;
-            -webkit-box-align: center;
-            -moz-box-align: center;
-            box-align: center;
-            -webkit-align-items: center;
-            -moz-align-items: center;
-            -ms-align-items: center;
-            -o-align-items: center;
-            align-items: center;
-            -ms-flex-align: center;
             border-radius: 3px;
             //cursor: pointer;
             margin: 0 -10px;
             padding: 10px;
-            position: relative;
+            list-style: none;
 
-            &:hover {
-                background: #f7f7fa;
-            }
-
-            .post-vote-button {
+            .inner {
+                -webkit-transition: background, 0.1s;
+                -moz-transition: background, 0.1s;
+                transition: background, 0.1s;
+                background: white;
+                font-size: 18px;
+                min-height: 110px;
+                line-height: 23px;
+                padding-top: 15px;
+                padding-bottom: 15px;
+                clear: both;
+                box-sizing: border-box;
                 display: -webkit-box;
                 display: -moz-box;
                 display: box;
@@ -312,56 +302,28 @@ h1 {
                 display: -moz-flex;
                 display: -ms-flexbox;
                 display: flex;
-                -webkit-flex-flow: column nowrap;
-                -moz-flex-flow: column nowrap;
-                flex-flow: column nowrap;
-                color: black;
+                -webkit-box-align: center;
+                -moz-box-align: center;
+                box-align: center;
+                -webkit-align-items: center;
+                -moz-align-items: center;
+                -ms-align-items: center;
+                -o-align-items: center;
+                align-items: center;
+                -ms-flex-align: center;
+                border-radius: 3px;
+                //cursor: pointer;
+                margin: 0 -10px;
+                padding: 10px;
                 position: relative;
-                text-align: center;
-                padding-right: 10px;
-                cursor: pointer;
 
-                .post-vote-button--count {
-                    font-size: 13px;
-                    line-height: 16px;
-                    margin: 2px 0 0;
-                }
-            }
+                &:hover {
+                    background: #f7f7fa;
 
-            .center {
-                display: inline-block;
-                vertical-align: middle;
-                margin-left: 20px;
-                -webkit-box-flex: 1;
-                -moz-box-flex: 1;
-                box-flex: 1;
-                -webkit-flex: 1;
-                -moz-flex: 1;
-                -ms-flex: 1;
-                flex: 1;
 
-                .link-link {
-                    text-decoration: none;
-                    color: #1B6982; //black;
-                    font-size: 20px;
-                    font-weight: 600;
-                    margin: 6px 2px 0 0px;
-                    line-height: 22px;
-                    margin-right: 5px;
-                    max-width: 700px;
-                    white-space: nowrap;
-                    overflow: hidden;
-                    text-overflow: ellipsis;
-                    display: inline-block;
-                    cursor: pointer;
                 }
 
-                .content-desc {
-                    color: #999999;
-                    font-size: 17px;
-                    margin: 5px 0 0 0px;
-                    display: block;
-                    line-height: 20px;
+                .post-vote-button {
                     display: -webkit-box;
                     display: -moz-box;
                     display: box;
@@ -369,36 +331,162 @@ h1 {
                     display: -moz-flex;
                     display: -ms-flexbox;
                     display: flex;
-                    -webkit-box-align: center;
-                    -moz-box-align: center;
-                    box-align: center;
-                    -webkit-align-items: center;
-                    -moz-align-items: center;
-                    -ms-align-items: center;
-                    -o-align-items: center;
-                    align-items: center;
-                    -ms-flex-align: center;
+                    -webkit-flex-flow: column nowrap;
+                    -moz-flex-flow: column nowrap;
+                    flex-flow: column nowrap;
+                    color: black;
+                    position: relative;
+                    text-align: center;
+                    padding-right: 10px;
+                    cursor: pointer;
+                    text-decoration: none;
+
+                    .post-vote-button--count {
+                        font-size: 13px;
+                        line-height: 16px;
+                        margin: 2px 0 0;
+                    }
+                }
+
+                .center {
+                    display: inline-block;
+                    vertical-align: middle;
+                    margin-left: 20px;
+                    -webkit-box-flex: 1;
+                    -moz-box-flex: 1;
+                    box-flex: 1;
+                    -webkit-flex: 1;
+                    -moz-flex: 1;
+                    -ms-flex: 1;
+                    flex: 1;
+
+                    .link-link {
+                        text-decoration: none;
+                        color: #1B6982; //black;
+                        font-size: 20px;
+                        font-weight: 600;
+                        margin: 6px 2px 0 0px;
+                        line-height: 22px;
+                        margin-right: 5px;
+                        max-width: 680px;
+                        white-space: nowrap;
+                        overflow: hidden;
+                        text-overflow: ellipsis;
+                        display: inline-block;
+                        cursor: pointer;
+                    }
+
+                    .content-desc {
+                        color: #999999;
+                        font-size: 17px;
+                        margin: 5px 0 0 0px;
+                        display: block;
+                        line-height: 20px;
+                        display: -webkit-box;
+                        display: -moz-box;
+                        display: box;
+                        display: -webkit-flex;
+                        display: -moz-flex;
+                        display: -ms-flexbox;
+                        display: flex;
+                        -webkit-box-align: center;
+                        -moz-box-align: center;
+                        box-align: center;
+                        -webkit-align-items: center;
+                        -moz-align-items: center;
+                        -ms-align-items: center;
+                        -o-align-items: center;
+                        align-items: center;
+                        -ms-flex-align: center;
+                    }
+                }
+
+                .right {
+                    display: inline-block;
+                    vertical-align: middle;
+                    margin-left: 20px;
+                    margin-right: 10px;
+
+                    .user-image {
+                        display: inline-block;
+                        position: relative;
+                    }
+
+                    img {
+                        border-radius: 50%;
+                        left: 13px;
+                        display: inline-block;
+                        position: relative;
+                    }
                 }
             }
 
-            .right {
-                display: inline-block;
-                vertical-align: middle;
-                margin-left: 20px;
+            &:hover {
+                background: #f7f7fa;
 
-                .user-image {
-                    display: inline-block;
-                    position: relative;
-                }
-
-                img {
-                    border-radius: 50%;
-                    top: 17px;
-                    left: 13px;
-                    display: inline-block;
-                    position: relative;
+                .inner {
+                    background: #f7f7fa;
                 }
             }
+
+            .comments {
+                cursor: pointer;
+
+                .comm-bubble {
+                    display: inline-block;
+                    font-size: 13px;
+                }
+
+                .spacer {
+                    display: inline-block;
+                    font-size: 13px;
+                    width: 24px; //lol
+                }
+
+                form {
+                    margin: 0 auto;
+                    width: 500px;
+                    display: inline-block;
+                    position: relative;
+                    left: 24px;
+
+                    .form-group {
+                        width: 100%;
+                    }
+                }
+                
+                ul {
+                    list-style-type: none;
+
+                    li{
+                        list-style: none;
+                        padding: 10px;
+
+                        img {
+                            -webkit-border-radius: 50%;
+                            -moz-border-radius: 50%;
+                            border-radius: 50%;
+                            position: relative;
+                        }
+
+                        span {
+
+                            //username
+                            &.userName {
+                                margin-left: 2px;
+                                color: #6A6A6B
+                            }
+
+                            //comment
+                            &.userComment {
+                                margin-left: 6px;
+                            }
+                        }
+                    }
+                }
+            }
+
+
 
             &.active {
                 max-height: 125px;
