--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,29 +1,11 @@
 <!doctype html>
 <html>
-  <head>
-    <title>JAKT Slack links</title>
-    <link href='/style.css' rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.css"/>
-    <script src="//www.parsecdn.com/js/parse-1.6.2.min.js"></script>
-  </head>
-  <body>
-	<h1 id="main-title"> JAKT Slack links</h1>
-
-    <div id="react-main-mount">
-      <%- reactOutput %>
-    </div>
-
-    <script id="initial-state-links" type="application/json"><%- links %></script>
-    <script id="initial-state-channels" type="application/json"><%- channels %></script>
-    <script id="initial-state-users" type="application/json"><%- users %></script>
-
-    <script src="https://cdn.socket.io/socket.io-1.1.0.js"></script>
-
-    <script type="text/javascript">
-        Parse.initialize("4aM4ir2NIena1vdc2OZgMnH9K3vIg9Ej6LON2j3j", "ucSFa5HkZ0sJ9CdOdF9P5y9FtXFhMFFTwaZaZiaO");
-    </script>
-
-	<script src="/main.js"></script>
-
-  </body>
+    <head>
+        <title>JAKT Slack links</title>
+    </head>
+    <body>
+        <div class="jumbotron text-center">
+            <h2><span class="fa fa-lock"></span>jakt links</h2>
+        </div>
+    </body>
 </html>
