--- a/views/main.ejs
+++ b/views/main.ejs
@@ -15,7 +15,7 @@
     </header>
 
     <div class="container">
-        <h1 id="main-title">JAKT Slack links</h1>
+        <h2 id="main-title"> <img src="/img/jakt-logo.jpg"> Slack links</h2>
 
         <div id="react-main-mount">
             <%- reactOutput %>
