--- a/public/style.scss
+++ b/public/style.scss
@@ -26,7 +26,7 @@
 
 
 body {
-    //font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    //font-family: 'ProximaNova-Regular', 'ProximaNova-Regular', sans-serif;
     font-family: 'Lato', 'Lato', sans-serif;
     margin: 0;
     padding: 0 0 40px 0;
@@ -246,8 +246,13 @@ div.dropdown-container {
     }
 }
 
-h1 {
+#main-title {
     text-align: center;
+    font-weight: bold;
+    img {
+        position: relative;
+        top: -4px;
+    }
 }
 
 
