--- a/public/style.scss
+++ b/public/style.scss
@@ -249,6 +249,7 @@ div.dropdown-container {
 #main-title {
     text-align: center;
     font-weight: bold;
+    margin-bottom: -50px;
     img {
         position: relative;
         top: -4px;
