--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,31 +1,16 @@
-<!doctype html>
-<html>
-<head>
-    <title>JAKT Slack links</title>
-    <link href='/style.css' rel="stylesheet">
-    <style>
-        body {
-            padding-top:80px;
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <div class="col-sm-6 col-sm-offset-3">
+<% layout('layout') -%>
 
-            <% if (message.length > 0) { %>
-                <div class="alert alert-danger"><%= message %></div>
-            <% } %>
+<div class="col-sm-6 col-sm-offset-3" style="margin-top: 80px">
 
-            <div class="jumbotron text-center">
-                <h2><span class="fa fa-lock"></span> jakt links</h2>
+    <% if (message.length > 0) { %>
+    <div class="alert alert-danger"><%= message %></div>
+    <% } %>
 
-                <p>Login with:</p>
+    <div class="jumbotron text-center">
+        <h2><span class="fa fa-lock"></span> jakt links</h2>
 
-                <a href="/auth/slack" class="btn btn-primary"><i class="fa fa-slack"></i> Slack</a>
-            </div>
+        <p>Login with:</p>
 
-        </div>
+        <a href="/auth/slack" class="btn btn-primary"><i class="fa fa-slack"></i> Slack</a>
     </div>
-</body>
-</html>
+</div>
