--- a/views/main.ejs
+++ b/views/main.ejs
@@ -1,34 +1,17 @@
-<!doctype html>
-<html>
-<head>
-    <title>JAKT Slack links</title>
-    <link href='/style.css' rel="stylesheet">
-    <script src="//www.parsecdn.com/js/parse-1.6.2.min.js"></script>
-    <script type="text/javascript">
-        Parse.initialize("4aM4ir2NIena1vdc2OZgMnH9K3vIg9Ej6LON2j3j", "ucSFa5HkZ0sJ9CdOdF9P5y9FtXFhMFFTwaZaZiaO");
-    </script>
-</head>
-<body>
+<% layout('layout') -%>
 
-    <header>
-        <% include partials/header %>
-    </header>
+<div class="container">
+    <h2 id="main-title"><img src="/img/jakt-logo.jpg"> Slack links</h2>
 
-    <div class="container">
-        <h2 id="main-title"> <img src="/img/jakt-logo.jpg"> Slack links</h2>
-
-        <div id="react-main-mount">
-            <%- reactOutput %>
-        </div>
+    <div id="react-main-mount">
+        <%- reactOutput %>
     </div>
+</div>
 
-    <script id="initial-state-links" type="application/json"><%- links %></script>
-    <script id="initial-state-channels" type="application/json"><%- channels %></script>
-    <script id="initial-state-users" type="application/json"><%- users %></script>
-    <script id="initial-state-currentUser" type="application/json"><%- userJSON %></script>
+<script id="initial-state-links" type="application/json"><%- links %></script>
+<script id="initial-state-channels" type="application/json"><%- channels %></script>
+<script id="initial-state-users" type="application/json"><%- users %></script>
+<script id="initial-state-currentUser" type="application/json"><%- userJSON %></script>
 
-    <script src="https://cdn.socket.io/socket.io-1.1.0.js"></script>
-    <script src="/main.js"></script>
-
-</body>
-</html>
+<script src="https://cdn.socket.io/socket.io-1.1.0.js"></script>
+<script src="/main.js"></script>
