--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -19,5 +19,14 @@
 
     <%- body %>
 
+    <% if (userEjs && !isProfile) { %>
+    <script id="initial-state-links" type="application/json"><%- links %></script>
+    <script id="initial-state-channels" type="application/json"><%- channels %></script>
+    <script id="initial-state-users" type="application/json"><%- users %></script>
+    <script id="initial-state-currentUser" type="application/json"><%- userJSON %></script>
+    <script src="https://cdn.socket.io/socket.io-1.1.0.js"></script>
+    <script src="/main.js"></script>
+    <% } %>
+
 </body>
 </html>
