--- a/views/main.ejs
+++ b/views/main.ejs
@@ -4,7 +4,9 @@
     <h2 id="main-title"><img src="/img/jakt-logo.jpg"> Slack links</h2>
 
     <div id="react-main-mount">
-        <%- reactOutput %>
+
+
+        <!-- reactOutput ejstag-->
     </div>
 </div>
 
